Removed special characters

--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/2.Use Case 2 - Request Complete Immunization History.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/2.Use Case 2 - Request Complete Immunization History.html
@@ -1,22 +1,22 @@
 <p>
-	<strong>
+ <strong>
   Goal:
  </strong>
  The goal of this use case is to request and receive a complete immunization history from another system.
 </p>
 <p>
-	<strong>
-  Supporting HL7 Version 2.5.1 Message Type: QBP &mdash; Profile Z34 and RSP &mdash; Profile Z32.
+ <strong>
+  Supporting HL7 Version 2.5.1 Message Type: QBP — Profile Z34 and RSP — Profile Z32.
  </strong>
 </p>
 <p>
-	<strong>
+ <strong>
   Precondition:
  </strong>
  A user or other actor requests that the sending system send a request for an immunization history using demographic information and/or other identifiers.
 </p>
 <p>
-	<strong>
+ <strong>
   Post-condition:
  </strong>
  The requesting system receives an immunization history. Note that if no matches are found or there are errors, no immunization history will be returned.
@@ -47,20 +47,20 @@
  5. There were errors or other problems
 </p>
 <p>
-	<br/>
+ <br/>
 </p>
 <table style="width: 100%;">
-	<tbody>
-		<tr>
-			<td class="fr-thick" style="width: 100.0000%;">
+ <tbody>
+  <tr>
+   <td class="fr-thick" style="width: 100.0000%;">
     Note that systems must deal with the situation where a Client has indicated that his/her records must be protected. (Only the owning provider may view) This should be clearly documented.
    </td>
-		</tr>
-	</tbody>
+  </tr>
+ </tbody>
 </table>
 <p>
-	<br/>
+ <br/>
 </p>
 <p>
-	<br/>
+ <br/>
 </p>
