Revert "Removed special characters"
This reverts commit 86bd93f58f41388cd681d084e49d57ef8ff6e736.

--- a/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/6.Use Case 6 - Report Error.html
+++ b/2.Actors, Goals, and Messaging Transactions/3.Use Case Descriptions/6.Use Case 6 - Report Error.html
@@ -1,11 +1,11 @@
 <p>
- <strong>
+	<strong>
   Goal:
  </strong>
  The goal of this use case is to send error messages related to messages. These errors could result in rejection of the message or parts of the message.
 </p>
 <p>
- <strong>
-  Supporting HL7 Version 2.5.1 Message Type: ACK — Profile Z23 and RSP — Profile Z33.
+	<strong>
+  Supporting HL7 Version 2.5.1 Message Type: ACK &mdash; Profile Z23 and RSP &mdash; Profile Z33.
  </strong>
 </p>
