--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/1.Acknowledging An Error That Causes Message Rejection (AR Response).html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/3.Send An Acknowledgement (ACK) In Response To A VXU/2.Send Error In ACK/1.Acknowledging An Error That Causes Message Rejection (AR Response).html
@@ -2,37 +2,37 @@
  If a system received a message with an unrecognized version id (10.0, for instance) the system would return an ACK with an application reject message.
 </p>
 <p>
- <span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
+	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
   MSH|^~\&amp;|DCS|MYIIS|MYIIS||200906040000-0500||ACK^V04^ACK|12343467|P|2.5.1||| CR&gt;
  </span>
 </p>
 <p>
- <span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
+	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
   MSA|AR|9299381&lt;CR&gt;
  </span>
 </p>
 <p>
- <span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
-  ERR||MSH^1^12|203^unsupported version id^^HL70357|E||||Unsupported HL7 Version ID—Message rejected&lt;CR&gt;
+	<span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
+  ERR||MSH^1^12|203^unsupported version id^^HL70357|E||||Unsupported HL7 Version ID&mdash;Message rejected&lt;CR&gt;
  </span>
 </p>
 <p>
  The AR response is reserved by HL7 for 4 errors:
 </p>
 <ul>
- <li>
+	<li>
   Unsupported message type
  </li>
- <li>
+	<li>
   Unsupported event code
  </li>
- <li>
+	<li>
   Unsupported processing ID
  </li>
- <li>
+	<li>
   Unable to process for reasons unrelated for format or content
  </li>
 </ul>
 <p>
- <br/>
+	<br/>
 </p>
